--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
@@ -39,27 +39,27 @@
             <div class="spinner"></div>
           </div>
 
-          <ng-multiselect-dropdown *ngIf="!choicesload" [data]="cuisinechoices" [(ngModel)]="cuisinemodel" [settings]="cuisinedropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Cuisines'"></ng-multiselect-dropdown>
+          <ng-multiselect-dropdown id="cuisinesselect" *ngIf="!choicesload" [data]="cuisinechoices" [(ngModel)]="cuisinemodel" [settings]="cuisinedropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Cuisines'"></ng-multiselect-dropdown>
         </div>
 
         <div class="select-down col-6 col-md-3 py-2">
           <div *ngIf="choicesload" class="spinner-container">
             <div class="spinner"></div>
           </div>
-          <ng-multiselect-dropdown *ngIf="!choicesload" [data]="ammenitieschoices" [(ngModel)]="ammenitiesmodel" [settings]=" ammenitiesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Ammenity'"></ng-multiselect-dropdown>
+          <ng-multiselect-dropdown id="amenityselect" *ngIf="!choicesload" [data]="ammenitieschoices" [(ngModel)]="ammenitiesmodel" [settings]=" ammenitiesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Ammenity'"></ng-multiselect-dropdown>
         </div>
 
         <div class="select-down col-6 col-md-3 py-2">
           <div *ngIf="choicesload" class="spinner-container">
             <div class="spinner"></div>
           </div>
-          <ng-multiselect-dropdown *ngIf="!choicesload" [data]="seatingtypeschoices" [(ngModel)]="seatingtypesmodel" [settings]=" seatingtypesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Seating Types'"></ng-multiselect-dropdown>
+          <ng-multiselect-dropdown id="seatingselect" *ngIf="!choicesload" [data]="seatingtypeschoices" [(ngModel)]="seatingtypesmodel" [settings]=" seatingtypesdropdownsettings" (ngModelChange)="applyfilters()" [placeholder]="'Seating Types'"></ng-multiselect-dropdown>
         </div>
       </div>
     </div>
     <form #capacityform="ngForm">
       <div class="row">
-        <div class="col-2 d-inline-block">
+        <div class="col-2 ml-4 d-inline-block">
           <select (click)="enablecapinput()"
                   id="seatingdropdown"
                   name="capacityselectinput"
@@ -76,32 +76,31 @@
                    (change)="applyfilters()"
                    [disabled]="disablecapacityinput"
                    id="capacityamount"
-                   placeholder="party size"
+                   placeholder="Party Size"
                    ngModel
                    class="form-control"
                    name="groupnumberinput">
           </div>
         </div>
-        <div class="col-1">
-          <!--padding-->
+        <div class="ml-4 col-7">
+          <form>
+            <input type="text"
+                   placeholder="Search By Venue Name"
+                   id="searchinput"
+                   name="searchinput"
+                   ngModel
+                   class="col-7 p-0 form-control input-gray mr-5 input-lg">
+            <button id="searchbutton" type="submit" class="btn-light-blue col-2 p-0">Search</button>
+          </form>
         </div>
-        <form class="col-7">
-          <input type="text"
-                 placeholder="Search By Venue Name"
-                 id="searchinput"
-                 name="searchinput"
-                 ngModel
-                 class="col-6 p-0 input-gray mr-5 input-lg">
-          <button id="searchbutton" type="submit" class="btn-light-blue col-3 p-0">Search</button>
-        </form>
       </div>
     </form>
   </div>
   <div class="container">
     <div class="filter-option">
-      <button style="cursor: pointer" *ngIf="filterdropdown" (click)="showfiltertoggle()" class="mr-2">- Show Less Filters</button>
-      <button style="cursor: pointer" *ngIf="!filterdropdown" (click)="showfiltertoggle()" class="mr-2">+ Show More Filters</button>
-      <button class="" (click)="clearfilters()" style="cursor: pointer">Clear All</button>
+      <button  style="cursor: pointer" *ngIf="filterdropdown" (click)="showfiltertoggle()" class=" rightbuttons mr-2 btn-primary">- Show Less Filters</button>
+      <button style="cursor: pointer" *ngIf="!filterdropdown" (click)="showfiltertoggle()" class="  rightbuttons mr-2 btn-primary">+ Show More Filters</button>
+      <button class="  rightbuttons btn-danger" (click)="clearfilters()" style="cursor: pointer">Clear All</button>
     </div>
   </div>
 </div>
@@ -120,12 +119,12 @@
       </div>
     </div>
 -->
-
+<div class="container">
 <div class="row">
   <div class="col-12 text-left">
     <h4>{{filteredvenueslength}} Venues</h4>
   </div>
-
+</div>
 </div>
 <app-venuelist></app-venuelist>
 
