--- a/src/app/mainroot/clientadmin/clientadminnavigation/clientadminnavigation.component.html
+++ b/src/app/mainroot/clientadmin/clientadminnavigation/clientadminnavigation.component.html
@@ -27,8 +27,13 @@
   -->
 
   <a [routerLink]="['/dashboard',permission,clientpk,'profile']">
-    <div class="col-md-12 navchoice">
+    <div class="col-12 navchoice">
       <h4>Profile</h4>
+    </div>
+  </a>
+  <a [routerLink]="['/dashboard', permision, clientpk, rfps]">
+    <div class="col-12 navchoice">
+      <h4>RFPs</h4>
     </div>
   </a>
 </div>
