--- a/src/app/venueadmin/parentadminview/adminnavigation/adminnavigation.component.html
+++ b/src/app/venueadmin/parentadminview/adminnavigation/adminnavigation.component.html
@@ -80,8 +80,14 @@
       <div class="nav-item">
         Venue Admin
       </div>
-
     </div> <!-- end total thing-->
+  </a>
+  <a routerLink="/admin/venue/receivedrfps">
+    <div class="nav nav-pills">
+      <div class="nav-item">
+        Received RFPs
+      </div>
+    </div>
   </a>
   <a [routerLink]="['/admin','venue','user-profile', user.pk]">
     <div class="nav nav-pills"> <!-- total thing-->
