--- a/src/app/mainroot/venuepage/venuepage.component.html
+++ b/src/app/mainroot/venuepage/venuepage.component.html
@@ -26,7 +26,7 @@
                 id="rfpsendselect"
                 name="rfpsendselect"
                 [ngModel]="dropdownreset">
-          <option value="">Submit RFP</option>
+          <option value="">Send RFP</option>
           <option value="n">Create New RFP</option>
           <option value="s">Create From Saved</option>
         </select>
@@ -126,14 +126,22 @@
     <form (ngSubmit)="sendrfp(rfpforminputs)" #rfpforminputs ="ngForm">
       <div *ngIf="!loginorsignup && !rfpsent" class="row">
         <div class="col-6">
-          <label>Date Of Event</label>
-          <br>
+          <input class="form-control"
+                 type="text"
+                 placeholder="Name Of Event *"
+                 id="eventname"
+                 name="eventname"
+                 required
+                 ngModel>
+        </div>
+        <div class="col-6">
           <input class="form-control"
                  type="date"
+                 placeholder="Date Of Event *"
                  id="eventdate"
                  name="eventdate"
                  required
-                 [ngModel]="savedevent.date"><span class="STredstar">*</span>
+                 [ngModel]="savedevent.date">
           <br>
           <div class="checkboxdiv">
             <input class="form-check-input"
@@ -603,6 +611,7 @@
     <table class="table table-hover">
       <thead>
         <tr>
+          <th scope="col">Event Name</th>
           <th scope="col">Event Date</th>
           <th scope="col">Event Purpose</th>
           <th scope="col">Start Time</th>
@@ -612,6 +621,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let rfp of savedrfps; let i=index" (click)="populaterfpfromsaved(i, createSaved, createProp)">
+          <td>
+            {{rfp.eventname}}
+          </td>
           <td>
             {{rfp.eventdate}}
           </td>
