--- a/src/app/mainroot/clientadmin/clientadminnavigation/clientadminnavigation.component.html
+++ b/src/app/mainroot/clientadmin/clientadminnavigation/clientadminnavigation.component.html
@@ -31,9 +31,9 @@
       <h4>Profile</h4>
     </div>
   </a>
-  <a [routerLink]="['/dashboard', permision, clientpk, rfps]">
+  <a [routerLink]="['/dashboard', permision, clientpk, 'rfps']">
     <div class="col-12 navchoice">
-      <h4>RFPs</h4>
+      <h4>Sent RFPs</h4>
     </div>
   </a>
 </div>
