--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -74,5 +74,7 @@
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/admin',permission,'venue-admin', venuenamelinkready, venueid,'room','list']">Room List</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['/admin', permission, 'venue-admin', venuenamelinkready, venueid, 'receivedrfps']">Received RFPs</a>
+  </li>
 </ul>
-
