--- a/src/app/venueadmin/parentadminview/receivedrfps/receivedrfps.component.html
+++ b/src/app/venueadmin/parentadminview/receivedrfps/receivedrfps.component.html
@@ -18,7 +18,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let rfp of sentrfps">
+        <tr *ngFor="let rfp of receviedrfps">
           <td>{{rfp.date}}</td>
           <td>{{rfp.name}}</td>
           <td>{{rfp.purpose}}</td>
