--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -23,11 +23,16 @@
   <div class="">
     <a *ngIf="suitsadmin && !activateedittitle" (click)="showedittitle()" class="settingslink"><h4>Edit</h4></a>
   </div>
-  <div class="col-auto">
-    <a style="cursor: pointer" [href]="domain" target="_blank"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
+  <div class="col-4">
+    <div class="float-left">
+      <a style="cursor: pointer" [href]="domain" target="_blank"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
+    </div>
   </div>
-
-
+  <div class="col-4">
+    <div class="float-right">
+      <p style="font-style: 9px">All Changes Saved Automatically</p>
+    </div>
+  </div>
   <div class="row">
     <div class="col-3 text-center">
       <h5>
@@ -55,11 +60,6 @@
     </div>
     <br>
     <br>
-    <div class="col-12">
-      <div class="text-center">
-        <h4>All Changes Saved Automatically</h4>
-      </div>
-    </div>
   </div>
 </div>
 
